fixed bug
profile button was sticking out behind todo app

--- a/css/style.css
+++ b/css/style.css
@@ -190,10 +190,11 @@ h3{
     top: 50%;
     width: 100%;
     height: 100%;
-    opacity: 1;   
+    opacity: 0;   
 }
 
 .profile_btn:hover {
+    opacity: 1;
     animation: slowFadeIn 2s ease-in;
 } 
 
